@@ -1,3 +1,13 @@
+2006-04-07  Adam Jackson  <ajax@freedesktop.org>
+
+	* configure.ac:
+	* src/s3v.h:
+	* src/s3v_dga.c:
+	* src/s3v_driver.c:
+	* src/s3v_i2c.c:
+	* src/s3v_shadow.c:
+	Unlibcwrap.  Bump server version requirement.  Bump to 1.9.0.
+
 2006-02-08  Luc Verhaegen <libv@skynet.be>
 
 	* src/s3v.h:
